# SCS-Lib

./: .gitignore  CMakeLists.txt  README.md  clientTCP.c  serveurTCP.c
lib/: fonctionsTCP.c  fonctionsTCP.h  fonctionsUDP(WIP).c  fonctionsUDP(WIP).h
